// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Many2One Form component Render 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="field has-addons"><p class="control is-expanded"><div class="autocomplete control"><div class="control is-clearfix"><input type="text" autocomplete="off" value="Test" class="input"> <!----> <!----> <!----></div> <span class="box" style="display:none;"><ul><li class="option"><span><b>Test</b></span></li>
<!---->
</ul>
</span>
</div>
</p>
<p class="control"><a class="button"><i class="fa fa-external-link"></i></a></p>
</div>
<!---->
</div>
</span>
`;

exports[`Many2One Form component Render icon 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="field has-addons"><p class="control is-expanded"><div class="autocomplete control"><div class="control has-icons-left is-clearfix"><input type="text" autocomplete="off" class="input"> <span class="icon is-left"><i class="fa fa-user"></i></span>
<!---->
<!---->
</div> <span class="box" style="display:none;"><ul><li class="option"><span>Test</span></li>
<!---->
</ul>
</span>
</div>
</p>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Many2One Form component Render invisible condition is false 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="field has-addons"><p class="control is-expanded"><div class="autocomplete control"><div class="control is-clearfix"><input type="text" autocomplete="off" value="Test" class="input"> <!----> <!----> <!----></div> <span class="box" style="display:none;"><ul><li class="option"><span><b>Test</b></span></li>
<!---->
</ul>
</span>
</div>
</p>
<p class="control"><a class="button"><i class="fa fa-external-link"></i></a></p>
</div>
<!---->
</div>
</span>
`;

exports[`Many2One Form component Render invisible condition is true 1`] = `<div data-server-rendered="true"></div>`;

exports[`Many2One Form component Render invisible is True 1`] = `<div data-server-rendered="true"></div>`;

exports[`Many2One Form component Render invisible is false 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="field has-addons"><p class="control is-expanded"><div class="autocomplete control"><div class="control is-clearfix"><input type="text" autocomplete="off" value="Test" class="input"> <!----> <!----> <!----></div> <span class="box" style="display:none;"><ul><li class="option"><span><b>Test</b></span></li>
<!---->
</ul>
</span>
</div>
</p>
<p class="control"><a class="button"><i class="fa fa-external-link"></i></a></p>
</div>
<!---->
</div>
</span>
`;

exports[`Many2One Form component Render label 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">The label</label> <div class="field has-addons"><p class="control is-expanded"><div class="autocomplete control"><div class="control is-clearfix"><input type="text" autocomplete="off" value="Test" class="input"> <!----> <!----> <!----></div> <span class="box" style="display:none;"><ul><li class="option"><span><b>Test</b></span></li>
<!---->
</ul>
</span>
</div>
</p>
<p class="control"><a class="button"><i class="fa fa-external-link"></i></a></p>
</div>
<!---->
</div>
</span>
`;

exports[`Many2One Form component Render mode readonly by config 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <a>Test</a> <!----></div></span>`;

exports[`Many2One Form component Render mode readonly conditional param 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <a>Test</a> <!----></div></span>`;

exports[`Many2One Form component Render mode readonly param 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <a>Test</a> <!----></div></span>`;

exports[`Many2One Form component Render placeholder 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="field has-addons"><p class="control is-expanded"><div class="autocomplete control"><div class="control is-clearfix"><input type="text" placeholder="The placeholder" autocomplete="off" class="input"> <!----> <!----> <!----></div> <span class="box" style="display:none;"><ul><li class="option"><span>Test</span></li>
<!---->
</ul>
</span>
</div>
</p>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Many2One Form component Render required 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="field has-addons"><p class="control is-expanded"><div class="autocomplete control"><div class="control has-icons-right is-clearfix"><input type="text" autocomplete="off" value="Test" class="input is-info"> <!----> <span class="icon is-right is-info"><i class="fa fa-info-circle"></i></span>
<!---->
</div> <span class="box" style="display:none;"><ul><li class="option"><span><b>Test</b></span></li>
<!---->
</ul>
</span>
</div>
</p>
<p class="control"><a class="button"><i class="fa fa-external-link"></i></a></p>
</div>
<!---->
</div>
</span>
`;

exports[`Many2One Form component Render required conditionnal 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="field has-addons"><p class="control is-expanded"><div class="autocomplete control"><div class="control has-icons-right is-clearfix"><input type="text" autocomplete="off" value="Test" class="input is-info"> <!----> <span class="icon is-right is-info"><i class="fa fa-info-circle"></i></span>
<!---->
</div> <span class="box" style="display:none;"><ul><li class="option"><span><b>Test</b></span></li>
<!---->
</ul>
</span>
</div>
</p>
<p class="control"><a class="button"><i class="fa fa-external-link"></i></a></p>
</div>
<!---->
</div>
</span>
`;

exports[`Many2One Form component Render required without value 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="field has-addons"><p class="control is-expanded"><div class="autocomplete control"><div class="control has-icons-right is-clearfix"><input type="text" autocomplete="off" class="input is-info"> <!----> <span class="icon is-right is-info"><i class="fa fa-info-circle"></i></span>
<!---->
</div> <span class="box" style="display:none;"><ul><li class="option"><span>Test</span></li>
<!---->
</ul>
</span>
</div>
</p>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Many2One Form component Render tooltip left 1`] = `
<span data-label="The left tooltip" data-server-rendered="true" class="tooltip is-primary is-left is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="field has-addons"><p class="control is-expanded"><div class="autocomplete control"><div class="control is-clearfix"><input type="text" autocomplete="off" value="Test" class="input"> <!----> <!----> <!----></div> <span class="box" style="display:none;"><ul><li class="option"><span><b>Test</b></span></li>
<!---->
</ul>
</span>
</div>
</p>
<p class="control"><a class="button"><i class="fa fa-external-link"></i></a></p>
</div>
<!---->
</div>
</span>
`;

exports[`Many2One Form component Render tooltip up 1`] = `
<span data-label="The tooltip" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="field has-addons"><p class="control is-expanded"><div class="autocomplete control"><div class="control is-clearfix"><input type="text" autocomplete="off" value="Test" class="input"> <!----> <!----> <!----></div> <span class="box" style="display:none;"><ul><li class="option"><span><b>Test</b></span></li>
<!---->
</ul>
</span>
</div>
</p>
<p class="control"><a class="button"><i class="fa fa-external-link"></i></a></p>
</div>
<!---->
</div>
</span>
`;

exports[`Many2One Form component Render without data 1 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="field has-addons"><p class="control is-expanded"><div class="autocomplete control"><div class="control is-clearfix"><input type="text" autocomplete="off" class="input"> <!----> <!----> <!----></div> <span class="box" style="display:none;"><ul><li class="option"><span>Test</span></li>
<!---->
</ul>
</span>
</div>
</p>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Many2One Form component Render without data 2 1`] = `
<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium" style="width:100%;"><div class="field" style="width:inherit;"><!----> <div class="field has-addons"><p class="control is-expanded"><div class="autocomplete control"><div class="control is-clearfix"><input type="text" autocomplete="off" class="input"> <!----> <!----> <!----></div> <span class="box" style="display:none;"><ul> <!----></ul></span></div>
</p>
<!---->
</div>
<!---->
</div>
</span>
`;

exports[`Many2One Thumbnail component Render 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <a>Test</a> <!----></div></span>`;

exports[`Many2One Thumbnail component Render invisible condition is false 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <a>Test</a> <!----></div></span>`;

exports[`Many2One Thumbnail component Render invisible condition is true 1`] = `<div data-server-rendered="true"></div>`;

exports[`Many2One Thumbnail component Render invisible is True 1`] = `<div data-server-rendered="true"></div>`;

exports[`Many2One Thumbnail component Render invisible is false 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <a>Test</a> <!----></div></span>`;

exports[`Many2One Thumbnail component Render label 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><label class="label">The label</label> <a>Test</a> <!----></div></span>`;

exports[`Many2One Thumbnail component Render tooltip left 1`] = `<span data-label="The left tooltip" data-server-rendered="true" class="tooltip is-primary is-left is-medium"><div class="field" style="width:inherit;"><!----> <a>Test</a> <!----></div></span>`;

exports[`Many2One Thumbnail component Render tooltip up 1`] = `<span data-label="The tooltip" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <a>Test</a> <!----></div></span>`;

exports[`Many2One Thumbnail component Render without data 1 1`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <a></a> <!----></div></span>`;

exports[`Many2One Thumbnail component Render without data 1 2`] = `<span data-label="" data-server-rendered="true" class="tooltip is-primary is-top is-medium"><div class="field" style="width:inherit;"><!----> <a></a> <!----></div></span>`;

exports[`Many2One list component Render invisible condition is false 1`] = `<a data-server-rendered="true">Test</a>`;

exports[`Many2One list component Render invisible condition is true 1`] = `<span data-server-rendered="true"></span>`;

exports[`Many2One list component Render invisible is True 1`] = `<span data-server-rendered="true"></span>`;

exports[`Many2One list component Render invisible is false 1`] = `<a data-server-rendered="true">Test</a>`;

exports[`Many2One list component Render with data 1`] = `<a data-server-rendered="true">Test</a>`;

exports[`Many2One list component Render without data 1 1`] = `<a data-server-rendered="true"></a>`;

exports[`Many2One list component Render without data 2 1`] = `<a data-server-rendered="true"></a>`;
